changed the display name of the plugin

--- a/addons/license_tracker/plugin.cfg
+++ b/addons/license_tracker/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="license_tracker"
+name="License Tracker"
 description="Track licenses of third-party assets used in your Godot projects."
 author="stesim"
 version="0.1"
